# jcli

./: Cargo.toml  LICENSE  README.md  cliff.toml  juventus.csv
src/: lib.rs  main.rs  utils.rs
src/cli/: base64.rs  csv.rs  http.rs  mod.rs  passwd.rs  text.rs
src/process/: base64_coder.rs  csv_convert.rs  http_serve.rs  mod.rs  passwd_gen.rs  text_sig.rs
