[package]
name = "jcli"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
serde_yaml = "0.9.34"
csv = "1.3.0"
enum_dispatch = "0.3.13"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }

[dev-dependencies]
