[package]
name = "jcli"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
clap = { version = "4.5.4", features = ["derive"] }
serde = { version = "1.0.201", features = ["derive"] }
serde_json = "1.0.117"
serde_yaml = "0.9.34"
csv = "1.3.0"
enum_dispatch = "0.3.13"
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros", "fs", "net"] }
rand = "0.8.5"
zxcvbn = "2.2.2"
base64 = "0.22.1"
blake3 = "1.5.1"
ed25519-dalek = { version = "2.1.1", features = ["rand_core"] }
tower-http = { version = "0.5.2", features = ["compression-full", "cors", "trace", "fs"] }
axum = { version = "0.7.5", features = ["http2", "query", "tracing"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
log = "0.4.21"

[dev-dependencies]
